# wirehair

./: .gitignore  CMakeLists.txt  gf256.h
.github/workflows/: build-release.yml
python/: whirehair.py  wirehair.py
wirehair-all-os/: CMakeLists.txt  README.md  build-all.sh  build-python-wheel.py  install-zig.sh  package-sdk.py
wirehair-all-os/cmake/: ZigToolchain.cmake
wirehair-all-os/python-package/: README.md  pyproject.toml  setup.py
wirehair-all-os/python-package/src/: whirehair.py
wirehair-all-os/python-package/src/wirehair/: __init__.py  __main__.py
